Get checkin recrods from phone
