# generated/api-definition.json
@@ -9,6 +9,98 @@
     "version": "1"
   },
   "paths": {
+    "/api/v1/CheckInRecords": {
+      "get": {
+        "tags": [
+          "CheckInRecords"
+        ],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/CheckInResponseResponseSet"
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/CheckInRecords/{email}": {
+      "get": {
+        "tags": [
+          "CheckInRecords"
+        ],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "email",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/CheckInResponseResponseSet"
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/CheckInRecords/{email}/{date}": {
+      "get": {
+        "tags": [
+          "CheckInRecords"
+        ],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "email",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "path",
+            "name": "date",
+            "required": true,
+            "type": "string",
+            "format": "date-time"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/CheckInResponseResponseSet"
+            }
+          }
+        }
+      }
+    },
     "/api/v1/Identity/init": {
       "post": {
         "tags": [
@@ -282,6 +374,51 @@
     }
   },
   "definitions": {
+    "CheckInResponse": {
+      "type": "object",
+      "properties": {
+        "info": {
+          "type": "string"
+        },
+        "utcDateTime": {
+          "format": "date-time",
+          "type": "string"
+        },
+        "errors": {
+          "description": "Set of errors that can potentially occur",
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "success": {
+          "description": "If the request was succesfull or not",
+          "type": "boolean"
+        }
+      }
+    },
+    "CheckInResponseResponseSet": {
+      "type": "object",
+      "properties": {
+        "response": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/CheckInResponse"
+          }
+        },
+        "errors": {
+          "description": "Set of errors that can potentially occur",
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "success": {
+          "description": "If the request was succesfull or not",
+          "type": "boolean"
+        }
+      }
+    },
     "UserRegistrationRequest": {
       "description": "Request to create a new user",
       "required": [
